# edgeai-rag-platform

./: .auto-claude-status  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py  script.py.mako
alembic/versions/: .gitkeep  20241226_001_initial_schema.py  20241231_002_add_user_security_columns.py  20260101_003_add_edge_logs.py
docs/obsidian-vault/02-rust-edge-collector/: mpsc-channels.md  rust-giris.md  tokio-runtime.md
edge-collector/: .dockerignore  Cargo.toml  Dockerfile
edge-collector/src/: buffer.rs  client.rs  config.rs  lib.rs  log_generator.rs  main.rs
frontend/: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: agents.ts  analytics.ts  auth.ts  client.ts  collaboration.ts  dashboard.ts  documents.ts  feedback.ts  knowledgeGraph.ts  queries.ts  versions.ts
frontend/src/components/: ProtectedRoute.tsx
frontend/src/components/agents/: AgentLogs.tsx  AgentSelector.tsx  AgentStatus.tsx
frontend/src/components/chat/: ChatInput.tsx  FeedbackButtons.tsx  MessageBubble.tsx  SourceReference.tsx
frontend/src/components/collaboration/: CollaboratorPresence.tsx  CommentSection.tsx  NotificationDropdown.tsx  ShareDialog.tsx  index.ts
frontend/src/components/documents/: DocumentCard.tsx  DocumentUpload.tsx  VersionHistory.tsx
frontend/src/components/layout/: AuthLayout.tsx  Header.tsx  PageContainer.tsx  Sidebar.tsx
frontend/src/components/ui/: Badge.tsx  Button.tsx  Card.tsx  Dropdown.tsx  Input.tsx  Modal.tsx  Spinner.tsx  Table.tsx  TextArea.tsx  Toast.tsx  index.ts
frontend/src/hooks/: useAgents.ts  useAuth.ts  useChat.ts  useDocuments.ts
frontend/src/pages/: AdvancedAnalytics.tsx  Agents.tsx  Chat.tsx  Dashboard.tsx  Documents.tsx  KnowledgeGraph.tsx  LearningAnalytics.tsx  Settings.tsx  SharedWithMe.tsx
frontend/src/pages/auth/: Login.tsx  Register.tsx
frontend/src/stores/: authStore.ts  chatStore.ts
frontend/src/types/: index.ts
scripts/: init-db.sql  verify_database_partitioning.py  verify_edge_collector_integration.py  verify_ingest_api.py
src/: __init__.py  config.py  main.py
src/agents/: __init__.py  base.py  crewai_agents.py  document_analyzer.py  genai_agents.py  hybrid_orchestrator.py  langgraph_agents.py  orchestrator.py  query_router.py  sql_generator.py  summarizer.py
src/api/: deps.py  middleware.py  rate_limiter.py
src/api/v1/: router.py
src/api/v1/endpoints/: agents.py  analytics.py  auth.py  collaboration.py  dashboard.py  documents.py  feedback.py  health.py  ingest.py  knowledge_graph.py  queries.py  roles.py  search.py  versions.py
src/api/v1/schemas/: __init__.py  agents.py  auth.py  documents.py  feedback.py  queries.py  types.py
src/core/: __init__.py  di.py  exceptions.py  logging.py  metrics.py  retry.py  security.py
src/db/: __init__.py  base.py  session.py
src/db/models/: __init__.py  agent_log.py  chunk.py  collaboration.py  document.py  document_version.py  edge_log.py  feedback.py  knowledge_graph.py  query.py  user.py
src/db/repositories/: __init__.py  agent_log.py  base.py  chunk.py  document.py  document_version.py  feedback.py  query.py  user.py
src/schemas/: __init__.py  ingest.py
src/services/: __init__.py  adaptive_learning_service.py  analytics_service.py  auth_service.py  cache_service.py  collaboration_service.py  conversation_service.py  document_service.py  document_version_service.py  embedding_service.py  hybrid_search_service.py  knowledge_graph_service.py  llm_service.py  query_service.py  storage_service.py  vector_service.py
tests/: conftest.py  test_health.py  test_ingest.py  test_services.py
tests/integration/: __init__.py  conftest.py  test_database_partitioning.py  test_edge_to_cloud_integration.py
