[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "edgeai-rag-platform"
version = "0.1.0"
description = "Enterprise-grade Multi-Agent RAG Platform with edge-cloud hybrid architecture"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "EdgeAI Team"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.4",
    "pytest-asyncio>=0.23.3",
    "pytest-cov>=4.1.0",
    "black>=24.1.0",
    "ruff>=0.1.14",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
]

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | migrations
)/
'''

[tool.ruff]
line-length = 88
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
python_version = "3.11"

# Gradual strict mode - strict for new code, lenient for existing
strict = false
strict_optional = true

# Type checking settings (lenient for gradual adoption)
disallow_untyped_defs = false
disallow_incomplete_defs = false
disallow_untyped_decorators = false
disallow_any_generics = false
check_untyped_defs = true

# Warning settings (lenient for gradual adoption)
warn_return_any = false
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = false
warn_no_return = true
warn_unreachable = false

# Error output settings
show_error_codes = true
show_column_numbers = true

# Import handling
ignore_missing_imports = true
no_implicit_reexport = false

# Allow gradual typing for tests
[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false

# Agent modules with complex dynamic types
[[tool.mypy.overrides]]
module = [
    "src.agents.crewai_agents",
    "src.agents.langgraph_agents",
    "src.agents.hybrid_orchestrator",
]
disallow_untyped_defs = false
disallow_incomplete_defs = false
warn_return_any = false

# API endpoints that interface with SQLAlchemy ORM
[[tool.mypy.overrides]]
module = [
    "src.api.v1.endpoints.*",
]
disallow_any_generics = false
warn_return_any = false

# Service modules with external library integrations
[[tool.mypy.overrides]]
module = [
    "src.services.storage_service",
    "src.services.embedding_service",
    "src.services.hybrid_search_service",
    "src.services.conversation_service",
    "src.services.query_service",
]
disallow_untyped_defs = false
warn_return_any = false

# DB repositories and models with SQLAlchemy dynamic types
[[tool.mypy.overrides]]
module = [
    "src.db.repositories.*",
    "src.db.models.*",
]
disallow_any_generics = false
warn_return_any = false

# Agent modules (all agents use complex dynamic typing)
[[tool.mypy.overrides]]
module = [
    "src.agents.*",
]
disallow_untyped_defs = false
disallow_incomplete_defs = false
warn_return_any = false

# Core modules with optional dependencies
[[tool.mypy.overrides]]
module = [
    "src.core.metrics",
    "src.core.security",
    "src.core.logging",
]
disallow_untyped_defs = false
warn_return_any = false

# LLM service with multiple provider integrations
[[tool.mypy.overrides]]
module = [
    "src.services.llm_service",
]
disallow_untyped_defs = false
warn_return_any = false

# All services with external integrations
[[tool.mypy.overrides]]
module = [
    "src.services.*",
]
disallow_untyped_defs = false
disallow_incomplete_defs = false
warn_return_any = false
disallow_any_generics = false

# API rate limiter
[[tool.mypy.overrides]]
module = [
    "src.api.rate_limiter",
]
disallow_untyped_defs = false
warn_return_any = false

# Files with complex typing that need gradual migration
[[tool.mypy.overrides]]
module = [
    # Services
    "src.services.analytics_service",
    "src.services.document_version_service",
    "src.services.collaboration_service",
    "src.services.knowledge_graph_service",
    "src.services.auth_service",
    "src.services.storage_service",
    "src.services.embedding_service",
    "src.services.llm_service",
    "src.services.adaptive_learning_service",
    "src.services.query_service",
    "src.services.conversation_service",
    # API endpoints
    "src.api.v1.endpoints.feedback",
    "src.api.v1.endpoints.knowledge_graph",
    "src.api.v1.endpoints.auth",
    "src.api.v1.endpoints.collaboration",
    "src.api.v1.endpoints.queries",
    "src.api.v1.endpoints.agents",
    "src.api.v1.endpoints.documents",
    "src.api.v1.endpoints.search",
    "src.api.v1.endpoints.analytics",
    "src.api.v1.endpoints.versions",
    "src.api.v1.endpoints.roles",
    # DB repositories
    "src.db.repositories.document_version",
    "src.db.repositories.query",
    "src.db.repositories.feedback",
    "src.db.repositories.chunk",
    "src.db.repositories.agent_log",
    "src.db.repositories.document",
    # DB models
    "src.db.models.collaboration",
    "src.db.models.document_version",
    # Agents
    "src.agents.langgraph_agents",
    "src.agents.crewai_agents",
    "src.agents.genai_agents",
    "src.agents.hybrid_orchestrator",
    "src.agents.query_router",
    "src.agents.orchestrator",
    # Core
    "src.core.logging",
]
ignore_errors = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --cov=src --cov-report=term-missing"
testpaths = ["tests"]
asyncio_mode = "auto"